<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fixture2equipos" >

    <TextView
        android:id="@+id/lblNomEq1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblNombreeq1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtNomeq1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lblNomEq1"
        android:layout_toRightOf="@+id/lblNomEq1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblNomEq2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblNomEq1"
        android:layout_below="@+id/txtNomeq1"
        android:layout_marginTop="30dp"
        android:text="@string/lblNombreeq2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtNomeq2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblNomEq2"
        android:layout_alignBottom="@+id/lblNomEq2"
        android:layout_alignLeft="@+id/txtNomeq1"
        android:layout_alignRight="@+id/txtNomeq1"
        android:ems="10" />

    <Button
        android:id="@+id/btnCrearFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblNomEq2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtNomeq2"
        android:onClick="ejecutar"
        android:text="@string/btnCrear" />

</RelativeLayout>
